# civitai-browser

./: .gitignore  cli.py  init.py  main.py  pyproject.toml  settings.py  ui.py
.obsidian/: workspace.json
api/: app.py  dependencies.py
api/routers/: settings.py
api/v1/: dependencies.py
api/v1/db/: civitai_table.py  gopeed_table.py
api/v1/models/: civitai_model.py  settings.py
api/v1/routers/: ai_models.py  gopeed_tasks.py  local.py  settings.py  util.py
core/: task_manage.py
data_analysis/: data_model_validation.py  main.py
db/: civitai_table.py  gopeed_table.py  table.py
gradio_ui/pages/main/: __init__.py  downloads.py  settings.py
html/: package-lock.json  package.json  tsconfig.json  tsconfig.vitest.json  vitest.config.ts
html/src/: App.vue  main.ts
html/src/components/: ModelCard.vue  ModelsSearchContext.vue  SearchButton.vue  SearchButtonCreatorsTab.vue  SearchButtonModelsTab.vue  SearchButtonTagsTab.vue
html/src/models/: creators.ts  creators_endpoint.ts  images.ts  images_endpoint.ts  modelId_endpoint.ts  models.ts  models_endpoint.ts  versionId.ts  versionId_endpoint.ts
html/src/router/: index.ts
html/src/services/: dexie.ts  gopeed.ts  rxdb.js  rxdb.ts  rxdb_deprecated.ts
html/src/utils/: civitai.ts  misc.d.ts  misc.js
html/src/views/: CivitAI.vue  Civitai.vue  Local.vue
models/api/v1/: creators_endpoint.py  modelId_endpoint.py  models_endpoint.py
models/base/: misc.py
notes/: Blueprint.canvas
notes/.obsidian/: workspace.json
notes/Logic/Download_models/: Untitled.canvas
tests/: data.json  test_table.py
(+11 files in other folders)
